r19 more general fixes. added profile commands, a bit more localization
r20 updated frFR
r21 altered logic for stuff that gets enabled/disabled during combat, and out of combat
r22 more bugfixes, and a enUS translation change. Careful, frFR translators!
r23 Libs fixes by Phanx
r27 don't ask about r24 - r26. I'm dumb. anyway, bug fixes, added new profile, horizontal bar direction switching
r28 many whelps. handled! no fix for ticket #6 yet. more enUS localizations
r29 fixed tickets 6, 7, and hopefully 8. added deDE localization and borders, updated frFR localization
r30 still no fix for ticket 8, sorry. fixes for enUS (thanks, Farook!) Farook and black_mystics working on deDE
r31 oneforeignshore and I (mostly him) fixed LOTS of issues. including localizations again. fixed ticket 8
r32 most of the options working. Test bars still non functional. need to test in a party or raid
r33 - r 35 Phanx changes, but based on old codebase
r36 new codebase, updated localizations
r37 added esES and esMX localizations
r38 fixed typos in esES and esMX. they should work now
r39 trying auto localization uploading
r40 minor altering of localizations
r41 experimental build for localizations
r42 cleaning up localizations
r43 added border support. test bars still wonky. altered toc and removed unnecessary files
r44 ruRU localization, some more new code
r45 big changes to localization. translators please pay attention! %s could be either the player or the target, %p% is always the player and %t% is always the target
r46 updated localization, fixed a couple of typos, commented out an option that needs more work
r47 giving credit where credit is due
r48 find/replace error, fix for keybindings hopefully, localization update
r49 just testing some stuff like borders and horizontal direction
r50 closer to getting borders working. bars switch direction finally, but only on /rl. working on that
r51 textures, direction, hiding icon all working. added icon position, commented out borders for now